Initial push. Created all Controllers and added code. Need to continue working on the tests that do not pass.