@@ -1,5 +1,7 @@
 package no.kristiania.Http;
 
+import no.kristiania.Controller.NewQuestionController;
+import no.kristiania.Controller.NewQuestionnaireController;
 import no.kristiania.Dao.AnswerDao;
 import no.kristiania.Dao.QuestionDao;
 import no.kristiania.Dao.QuestionnaireDao;
@@ -60,11 +62,8 @@ public class HttpServerTest {
 
     @Test
     void shouldRespondWithFileOnDisk() throws IOException {
-        Path contentRoot = Paths.get("target/test-classes");
         String fileContent = "Content created at " + LocalTime.now();
-        Files.writeString(contentRoot.resolve("file.txt"), fileContent);
-
-        server.setContentRoot(contentRoot);
+        Files.write(Paths.get("target/test-classes/file.txt"), fileContent.getBytes());
 
         HttpClient client = new HttpClient("localhost", server.getPort(), "/file.txt");
         assertEquals(fileContent, client.getMessageBody());
@@ -73,13 +72,9 @@ public class HttpServerTest {
 
     @Test
     void shouldReturnContentTypeBasedOnFileEnding() throws IOException {
-        Path contentRoot = Paths.get("target/test-classes");
 
         String fileContent = "<!DOCTYPE html><html><h1>Hello</h1></html>";
-
-        Files.writeString(contentRoot.resolve("file.html"), fileContent);
-
-        server.setContentRoot(contentRoot);
+        Files.write(Paths.get("target/test-classes/file.html"), fileContent.getBytes());
 
         HttpClient client = new HttpClient("localhost", server.getPort(), "/file.html");
         assertEquals(fileContent, client.getMessageBody());
@@ -90,9 +85,7 @@ public class HttpServerTest {
     void shouldEchoQueryParameters() throws IOException {
         HttpClient client = new HttpClient("localhost", server.getPort(), "/hello?firstName=Test&lastName=Tester");
         assertEquals("Hello Test Tester", client.getMessageBody());
-
     }
-
 
     @Test
     void shouldCreateNewQuestion() throws IOException, SQLException {
@@ -104,7 +97,9 @@ public class HttpServerTest {
         questionnaireDao.save(questionnaire);
 
         QuestionDao questionDao = new QuestionDao(TestData.testDataSource());
-        server.setQuestionDao(questionDao);
+        // server.setQuestionDao(questionDao);
+        server.addController("/api/newQuestion", new NewQuestionController(questionDao));
+
         HttpPostClient postClient = new HttpPostClient(
                 "localhost",
                 server.getPort(),
@@ -112,16 +107,15 @@ public class HttpServerTest {
                 "questionnaires=1&title=What+is+your+name%3F&values=5"
         );
         assertEquals(200, postClient.getStatusCode());
-        Question question = server.getQuestionDao().retrieve(1);
+        Question question = questionDao.retrieve(1);
         assertEquals(1 ,question.getQuestionnaireId());
         assertEquals("What is your name?", question.getQuestionTitle());
-
     }
 
     @Test
     void shouldCreateNewQuestionnaire() throws IOException, SQLException {
         QuestionnaireDao questionnaireDao = new QuestionnaireDao(TestData.testDataSource());
-        server.setQuestionnaireDao(questionnaireDao);
+        server.addController("api/newQuestionnaire", new NewQuestionnaireController(questionnaireDao));
 
         HttpPostClient postClient = new HttpPostClient(
                 "localhost",
@@ -147,7 +141,7 @@ public class HttpServerTest {
         questionnaireDao.save(secondQuestionnaire);
 
 
-        server.setQuestionnaireDao(questionnaireDao);
+        //server.setQuestionnaireDao(questionnaireDao);
 
         HttpClient client = new HttpClient(
                 "localhost",
@@ -168,7 +162,7 @@ public class HttpServerTest {
 
 
         QuestionDao questionDao = new QuestionDao(TestData.testDataSource());
-        server.setQuestionDao(questionDao);
+        server.addController("/api/newQuestion", new NewQuestionController(questionDao));
 
         Question question = new Question();
         question.setQuestionTitle("Do you like pizza?");
@@ -176,18 +170,19 @@ public class HttpServerTest {
         question.setHighLabel("Love it");
         question.setNumberOfValues(5);
         question.setQuestionnaireId(1);
-        server.getQuestionDao().save(question);
+        questionDao.save(question);
+
         HttpClient client = new HttpClient("localhost", server.getPort(), "/api/questions");
         assertEquals("<p>Do you like pizza?</p><form method=\"\" action=\"\"><label>Not at all</label><input value=\"0\"type=\"radio\" name=\"question1_answer\"></input><input value=\"1\"type=\"radio\" name=\"question1_answer\"></input><input value=\"2\"type=\"radio\" name=\"question1_answer\"></input><input value=\"3\"type=\"radio\" name=\"question1_answer\"></input><input value=\"4\"type=\"radio\" name=\"question1_answer\"></input><label>Love it</label></form>", client.getMessageBody());
 
     }
 
     @Test
-    void shouldShowQuestionsWithSpesificQuestionnaire() throws IOException, SQLException {
+    void shouldShowQuestionsWithSpecificQuestionnaire() throws IOException, SQLException {
         QuestionnaireDao questionnaireDao = new QuestionnaireDao(TestData.testDataSource());
         QuestionDao questionDao = new QuestionDao(TestData.testDataSource());
-        server.setQuestionnaireDao(questionnaireDao);
-        server.setQuestionDao(questionDao);
+        server.addController("/api/newQuestionnaire", new NewQuestionnaireController(questionnaireDao));
+        server.addController("/api/newQuestion", new NewQuestionController(questionDao));
         Questionnaire questionnaire = new Questionnaire();
         questionnaire.setQuestionnaireTitle("Chosen questionnaire");
         questionnaire.setQuestionnaire_id(1);
@@ -217,21 +212,22 @@ public class HttpServerTest {
         Questionnaire questionnaire = new Questionnaire();
         questionnaire.setQuestionnaireTitle("Chosen questionnaire");
 
-        server.setQuestionnaireDao(questionnaireDao);
+        server.addController("/api/newQuestionnaire", new NewQuestionnaireController(questionnaireDao));
         questionnaireDao.save(questionnaire);
 
         Question question = new Question();
         question.setQuestionTitle("Question Title");
         question.setNumberOfValues(10);
         question.setQuestionnaireId(1);
-        server.setQuestionDao(questionDao);
+        server.addController("/api/newQuestion", new NewQuestionController(questionDao));
         questionDao.save(question);
 
-        server.setAnswerDao(answerDao);
+
         Answer answer = new Answer();
 
         answer.setAnswerValue(1);
         answer.setQuestionId(1);
+        answerDao.save(answer);
 
         HttpPostClient postClient = new HttpPostClient(
                 "localhost",
@@ -240,7 +236,7 @@ public class HttpServerTest {
                 "value=1&name=1"
         );
         assertEquals(200, postClient.getStatusCode());
-        assertEquals("<h1>Chosen questionnaire</h1><p>Question Title</p><form method=\"POST\" action=\"/api/answerQuestionnaire\"><label>Low</label><input value=\"0\"type=\"radio\" name=\"question1_answer\"></input><input value=\"1\"type=\"radio\" name=\"question1_answer\"></input><input value=\"2\"type=\"radio\" name=\"question1_answer\"></input><input value=\"3\"type=\"radio\" name=\"question1_answer\"></input><input value=\"4\"type=\"radio\" name=\"question1_answer\"></input><label>High</label><br><button value=\"Send\">Send</button></form>", postClient.getMessageBody());
+        assertEquals("Thank You", postClient.getMessageBody());
 
 
     }
